--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </nav>
       <header>
         <div class="row">
-        <div>
+        <div class="home__description">
           <h1>Best place to learn Frontend</h1>
           <p class="subheader">Go from being an absolute beginner to a pro with a simplified process</p>
-          <button>Start now</button>
+          <button class="home__description">Start now</button>
         </div>
         <figure>
           <img src="./assets/laptop.png" alt="Home page image" />
@@ -29,8 +29,10 @@
       </header>
     </section>
     <main>
-      <section id="About">
-      <h2>About</h2>
+      <section id="about">
+      <h2> About</h2>
+
+      <div class="row"></div>
       <div class="section__description">
       <div class="section__description--wrapper">
         <p class="section__description--para">
@@ -47,36 +49,58 @@
         </p>
       </div>
       <figure class="about__image--wrapper">
-        <img src="./assets/about.jpg" alt="" />
+        <img src="./assets/about.jpg" alt="" /> 
       </figure>
     </div>
+  </div>
   </section>
 
-      <section id="Discord"></section>
+      <section id="discord">
       <h2>Discord</h2>
-      <figure>
+      <div class="row">
+      <div class="section__description">
+      <figure class="about__image--wrapper" >
         <img src="./assets/discord.png" alt="Discord" />
       </figure>
-      <div>
-        <p>
+      <div class="section__description--wrapper">
+        <p class="section__description--para">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis est
           unde illo mollitia ut alias exercitationem at, nostrum itaque.
           Aspernatur expedita provident voluptas rem maiores, labore at
           blanditiis animi eaque!
         </p>
-        <p>
+        <p class="section__description--para" >
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, quos
           dolor assumenda blanditiis repellat unde quas maiores velit
           exercitationem, mollitia pariatur! Amet fuga quaerat doloremque
           incidunt quae a molestiae repudiandae.
         </p>
       </div>
+      </div>
+    </div>
+      </section>
 
-      <section id="Contact"></section>
+      <section id="contact">
       <h2>Contact</h2>
-      <form action="">
-        <input type="text" placeholder="Jane@example.com" />
+      <form action=""> 
+        <span>Email</span>
+        <input type="text" placeholder="Jane@example.com" >
+        <span>Message</span>
+        <textarea type="text" placeholder="Cool website, lets get connected!"></textarea>
+       
+          <button>Contact Us!</button>
       </form>
+    </section>
     </main>
+
+    <footer>
+      <img class="footer__logo" src="./assets/FES.svg" alt="">
+      <div class="footer__links">
+        <a class="footer__links"  href="#discord">Discord</a>
+        <a class="footer__links" href="#about">About</a>
+        <a class="footer__links" href="#contact">Contact</a>
+        <a class="footer__links"  href="" >Courses</a>
+      <p>Copyright Frontend Simplified</p>
+    </footer>
   </body>
 </html>
